split controllers